openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  selector:
    app: order-management
  ports:
    - name: http
      port: 8080
      targetPort: http
