openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  to:
    kind: Service
    name: order-management
  port:
    targetPort: http
